<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wmich.edu.lab3lhaspe0925.SportsSoundsActivity"
    android:background="#090909">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtHeadSportsCalls"
        android:id="@+id/txtHeadSportsCalls"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFrazierDown"
        android:id="@+id/btnFrazier"
        android:layout_below="@+id/imgFrazierGoesDown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/imgMiracle"
        android:src="@drawable/us32"
        android:contentDescription="@string/imgMiracle"
        android:layout_below="@+id/txtHeadSportsCalls"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMiraclePlay"
        android:id="@+id/btnMiracle"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/imgMiracle"
        android:layout_alignLeft="@+id/txtHeadSportsCalls"
        android:layout_alignStart="@+id/txtHeadSportsCalls" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgFrazierGoesDown"
        android:src="@drawable/downgoesfrazier"
        android:contentDescription="@string/imgFrazierGoesDown"
        android:layout_below="@+id/btnMiracle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBackToMain"
        android:id="@+id/btnMediaPlayerBack"
        android:layout_below="@+id/btnFrazier"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:enabled="true" />

</RelativeLayout>
